# OctoDiary-py

./: Examples.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
octodiary/: __init__.py  exceptions.py  urls.py
octodiary/apis/: __init__.py  async_.py  base.py  sync.py
octodiary/asyncApi/: __init__.py  base.py
octodiary/asyncApi/mes/: __init__.py  mobile.py
octodiary/asyncApi/myschool/: __init__.py  mobile.py  web.py
octodiary/syncApi/: __init__.py  base.py
octodiary/syncApi/mes/: __init__.py  mobile.py
octodiary/syncApi/myschool/: __init__.py  mobile.py  web.py
octodiary/types/: __init__.py  academicyear.py  captcha.py  enter_sms_code.py  events.py  model.py  persondata.py  role.py  sessionuserinfo.py  studentprofile.py  user.py  userchildrens.py  usercontact.py  userinfo.py  webfamilyprofile.py  weborganizations.py
octodiary/types/mes/: __init__.py
octodiary/types/mes/mobile/: __init__.py  day_balance_info.py  events.py  family_profile.py  family_status.py  lesson_schedule_item.py  marks.py  meals_clients.py  notification.py  periods_schedules.py  person_data.py  school_info.py  short_homeworks.py  short_subject_marks.py  subjects.py  visits.py
octodiary/types/mes/web/: __init__.py
octodiary/types/mobile/: __init__.py  class_members.py  day_balance_info.py  family_profile.py  family_status.py  lesson_schedule_item.py  marks.py  meals_clients.py  notification.py  parallel_curriculum.py  periods_schedules.py  person_data.py  rating.py  school_info.py  short_homeworks.py  short_subject_marks.py  subject_marks.py  subject_marks_for_subject.py  subjects.py  user_childrens.py  users_profiles_info.py  visits.py
octodiary/types/myschool/: __init__.py
octodiary/types/myschool/mobile/: __init__.py  events.py  family_profile.py  lesson_schedule_items.py  list_subjects.py  marks.py  notifications.py  parallel_curriculum.py  periods_schedule.py  person_data.py  rating.py  short_homeworks.py  short_subject_marks.py  subject_marks_for_subject.py  user_childrens.py  user_settings.py  users_profile_info.py
octodiary/types/myschool/web/: __init__.py  academicyear.py  events.py  (+12 more)
octodiary/types/web/: __init__.py  academic_year.py  custom_event.py  events.py  person_data.py  session_user_info.py  student_profile.py  user.py  user_children.py  user_contact.py  user_info.py  web_family_profile.py  web_organizations.py
