[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octodiary"
dynamic = ["version"]
description = "Python библиотека для использования API: МЭШ / Моя Школа."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "Den4ikSuperOstryyPer4ik", email = "oleynik.denis.2009@gmail.com" },
  { name = "bxkr", email = "me@bxkr.org" },
]
keywords = [
    "api",
    "myschool",
    "myschool apimesh",
    "octodiary",
    "моя школа",
    "мэш",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiohttp",
    "fake_useragent",
    "pydantic",
]

[project.urls]
"Bug Reports" = "https://github.com/OctoDiary/OctoDiary-py/issues"
Examples = "https://github.com/OctoDiary/OctoDiary-py/blob/main/Examples.md"
Homepage = "https://github.com/OctoDiary/OctoDiary-py"
Organization = "https://github.com/OctoDiary"
Source = "https://github.com/OctoDiary/OctoDiary-py"
Telegram-Channel = "https://t.me/OctoDiary"

[tool.hatch.version]
path = "octodiary/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/octodiary",
]

[tool.black]
target-version = ["py39"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py39"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore built-in names
  "A003", "A002",
  "PLR2004", "RUF002",
]

[tool.ruff.isort]
known-first-party = ["octodiary"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.hatch.build.wheel]
packages = ["octodiary"]
